Changed jenkins build script to support multiple build environments